# SDET_excercise

./: .env.example  .gitignore  BASELINE.md  Dockerfile  Makefile  README.md  SDET_CONCEPTS_GUIDE.md  config.py  docker-compose.release.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  wsgi.py
.github/actions/generate-keys/: action.yml
.github/workflows/: main.yml  pr-nightly.yml  pr.yml  release.yml  tests.yml
app/: __init__.py  models.py
app/routes/: __init__.py  api.py  views.py
app/templates/: index.html  task_detail.html  task_form.html
contracts/: auth_openapi.yaml  jwt_contract.yaml  openapi.yaml  tasks_openapi.yaml
gateway/: Dockerfile  config.py  requirements.txt  wsgi.py
gateway/gateway_app/: __init__.py  routes.py
gateway/tests/: conftest.py
gateway/tests/integration/: test_proxy.py  test_resilience.py
keys/: generate.py
scripts/: deploy-local.sh  wait-for-health.sh
services/auth/: Dockerfile  config.py  requirements.txt  wsgi.py
services/frontend/: Dockerfile  config.py  requirements.txt  wsgi.py
services/tasks/: Dockerfile  config.py  requirements.txt  wsgi.py
shared/: __init__.py  live_stack.py  test_helpers.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_tasks_crud.py  test_validation.py
tests/contracts/: __init__.py  test_provider_contract.py
tests/cross_service/: conftest.py  test_auth_task_flow.py  test_jwt_contract.py  test_service_isolation.py
tests/e2e/: __init__.py  conftest.py  test_task_flows.py
tests/integration/: test_tasks_crud.py  test_validation.py
tests/mocks/: __init__.py  test_external_service.py
tests/performance/: README.md  __init__.py  check_thresholds.py  helpers.py  locustfile.py  thresholds.yml
tests/security/: README.md  conftest.py  test_input_attack_handling.py  test_mass_assignment.py  test_session_security.py  test_xss_output_encoding.py
tests/smoke/: conftest.py  test_health.py
tests/ui/: conftest.py  test_task_flows.py
tests/unit/: test_models.py
(+56 files in other folders)
